# D2Pixel

./: .env.template  .gitignore  .gitmodules  README.md  TODO.md  main.py  main.spec  mypy.ini  pyproject.toml
resources/: styles.qss
resources/tesseract/: __init__.pyi
scripts/: init.sh  keep_gui_alive.bat
scripts/helper/: capture.py  main.py  main_gui.py  main_system.py  position_area.py
scripts/helper/output/: benchmark.pstats
src/: consts.py  exceptions.py
src/bots/: bots_manager.py
src/common/: environment.py  randomizer.py  retry.py  scheduler.py  searcher.py  time.py
src/entities/: building_info.py  item.py
src/gui/: app.py  main_window.py
src/image_manager/: analysis.py  animation.py  debug.py  masks.py  ocr.py  transformation.py
src/loggers/: __init__.py  app_logger.py  bot_logger.py  formatters.py  handlers.py
src/services/: __init__.py  breed.py  character.py  character_path_info.py  character_path_map.py  client_service.py  collectable.py  config_user.py  equipment.py  item.py  job.py  line.py  login.py  map.py  price.py  recipe.py  server.py  session.py  spell.py  stat.py  sub_area.py  template.py  type_item.py  user.py  world.py
src/states/: character_state.py  map_state.py
src/utils/: retry.py  scheduler.py  time.py
src/window_manager/: capturer.py  controller.py  organizer.py  os_version.py  raw_input.py  win32.py  window_info.py  window_searcher.py
tests/: __init__.py  utils.py
tests/tests_algos/: test_tsp.py
tests/tests_analysis/: test_animation.py  test_group_enemy.py  test_heart_bar.py  test_hightlight.py  test_icon_searcher.py  test_info_bar.py  test_inventory_bar.py
tests/tests_craft_magic/: test_parse_item.py  test_parse_runes_count.py
tests/tests_fight/: test_bresenham.py  test_grid_fight.py  test_spell.py
tests/tests_gui/: test_table.py
tests/tests_ocr/: test_bank.py  test_info_modal.py  test_lvl_up.py  test_map.py  test_pa.py  test_remaining_slot.py  test_sell_area_price.py
tests/tests_path_finding/: test_astar.py  test_tsp.py
tests/tests_queries/: test_queries.py
tests/tests_service/: test_character.py
tests/tests_system/: test_chat.py  test_connection.py  test_fighter.py  test_hud.py  test_storage.py  test_walker.py  utils.py
tests/tests_weight/: test_weigh_sub_area.py
(+161 files in other folders)
