[tool.poetry]
name = "ezred2bot"
version = "0.1.0"
description = ""
authors = ["Valentin Alix"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.4"
unidecode = "^1.3.8"
tqdm = "^4.66.4"
sortedcontainers = "^2.4.0"
mypy = "^1.10.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
cachetools = "^5.3.3"
numpy = "^1.8.0"

[tool.poetry.group.frontend.dependencies]
opencv-python = "^4.10.0.82"
pyqt5-qt5 = "=5.15.2"
pynput = "^1.7.7"
faker = "^25.8.0"
pywin32 = "^306"
tesserocr = {path = "resources/tesseract/tesserocr-2.6.2-cp312-cp312-win_amd64.whl"}
pyperclip = "^1.8.2"
psutil = "^5.9.8"
pyqt5 = "^5.15.10"
pyqtspinner = "^2.0.0"
pyqt5-stubs = "^5.15.6.0"
pyinstaller = "^6.6.0"
qt-material = "^2.14"
types-pynput = "^1.7.6.20240511"
types-psutil = "^5.9.5.20240516"
types-pywin32 = "^306.0.0.20240408"
schedule = "^1.2.2"
gprof2dot = "^2022.7.29"
requests = "^2.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
