[tool.poetry]
name = "ezred2bot"
version = "0.1.0"
description = ""
authors = ["Valentin Alix"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = {extras = ["email"], version = "^2.7.4"}
unidecode = "^1.3.8"
sortedcontainers = "^2.4.0"
python-dotenv = "^1.0.1"
cachetools = "^5.3.3"
numpy = "^1.8.0"
opencv-python = "^4.10.0.82"
pyqt5-qt5 = "=5.15.2"
pynput = "^1.7.7"
faker = "^25.8.0"
pywin32 = "^306"
tesserocr = {path = "resources/tesseract/tesserocr-2.6.2-cp312-cp312-win_amd64.whl"}
psutil = "^5.9.8"
pyqt5 = "^5.15.10"
pyqtspinner = "^2.0.0"
pyinstaller = "^6.6.0"
qt-material = "^2.14"
schedule = "^1.2.2"
requests = "^2.32.2"
pyarmor = "^8.5.9"

[tool.poetry.group.dev.dependencies]
types-pynput = "^1.7.6.20240511"
types-psutil = "^5.9.5.20240516"
types-pywin32 = "^306.0.0.20240408"
types-cachetools = "^5.3.0.7"
types-requests = "^2.32.0.20240622"
pyqt5-stubs = "^5.15.6.0"
gprof2dot = "^2022.7.29"
matplotlib = "^3.9.0"
mypy = "^1.10.0"
tqdm = "^4.66.4"
coloredlogs = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
